--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -1,35 +1,35 @@
 name : English
 
 # General Strings
-general_1 : "**🥀 𝐑𝐞𝐩𝐥𝐲 𝐓𝐨 𝐚 𝐔𝐬𝐞𝐫'𝐬 𝐌𝐞𝐬𝐬𝐚𝐠𝐞 𝐎𝐫 𝐆𝐢𝐯𝐞 𝐔𝐬𝐞𝐫𝐧𝐚𝐦𝐞/𝐔𝐬𝐞𝐫 𝐈𝐃 ✨ ...**"
-general_2 : "**❌ 𝐄𝐫𝐫𝐨𝐫, 𝐖𝐫𝐨𝐧𝐠 𝐔𝐬𝐚𝐠𝐞 𝐎𝐟 𝐂𝐨𝐦𝐦𝐚𝐧𝐝❗...**"
-general_3 : "**🥀 𝐒𝐨𝐦𝐞 𝐄𝐱𝐜𝐞𝐩𝐭𝐢𝐨𝐧 𝐎𝐜𝐜𝐮𝐫𝐞𝐝, 𝐖𝐡𝐢𝐥𝐞 𝐏𝐫𝐨𝐜𝐞𝐬𝐬𝐢𝐧𝐠 𝐘𝐨𝐮𝐫 𝐐𝐮𝐞𝐫𝐲.\n\n❗ 𝐄𝐱𝐜𝐞𝐩𝐭𝐢𝐨𝐧 𝐓𝐲𝐩𝐞:-** `{0}`"
-general_4 : "**🤖 𝐘𝐨𝐮𝐫 𝐀𝐧 𝐀𝐧𝐨𝐧𝐲𝐦𝐨𝐮𝐬 𝐀𝐝𝐦𝐢𝐧, 𝐑𝐞𝐯𝐞𝐫𝐭 𝐁𝐚𝐜𝐤 𝐓𝐨 𝐍𝐨𝐫𝐦𝐚𝐥 💞 ...**"
-general_5 : "**🥀 𝐘𝐨𝐮 𝐍𝐞𝐞𝐝 𝐕𝐂 𝐑𝐢𝐠𝐡𝐭𝐬 𝐓𝐨 𝐏𝐞𝐫𝐟𝐨𝐫𝐦 𝐓𝐡𝐢𝐬 𝐀𝐜𝐭𝐢𝐨𝐧 ✨ ..."
-general_6 : "**❌ 𝐁𝐨𝐭 𝐢𝐬 𝐍𝐨𝐭 𝐒𝐭𝐫𝐞𝐚𝐦𝐢𝐧𝐠\n𝐎𝐧 𝐕𝐂❗...**"
+general_1 : "**ʀᴇᴘʟʏ ᴛᴏ ᴀ ᴜsᴇʀ's ᴍᴇssᴀɢᴇ ᴏʀ ɢɪᴠᴇ ᴜsᴇʀɴᴀᴍᴇ/ᴜsᴇʀ ɪᴅ ✨ ...**"
+general_2 : "**ᴇʀʀᴏʀ, ᴡʀᴏɴɢ ᴜsᴀɢᴇ ᴏғ ᴄᴏᴍᴍᴀɴᴅ❗❗...**"
+general_3 : "**sᴏᴍᴇ ᴇxᴄᴇᴘᴛɪᴏɴ ᴏᴄᴄᴜʀʀᴇᴅ, ᴡʜɪʟᴇ ᴘʀᴏᴄᴇssɪɴɢ ʏᴏᴜʀ ǫᴜᴇʀʏ.\n\n❗ ᴇxᴄᴇᴘᴛɪᴏɴ ᴛʏᴘᴇ:-** `{0}`"
+general_4 : "**ʏᴏᴜʀ ᴀɴ ᴀɴᴏɴʏᴍᴏᴜs ᴀᴅᴍɪɴ, ʀᴇᴠᴇʀᴛ ʙᴀᴄᴋ ᴛᴏ ɴᴏʀᴍᴀʟ ...**"
+general_5 : "**ʏᴏᴜ ɴᴇᴇᴅ ᴠᴄ ʀɪɢʜᴛs ᴛᴏ ᴘᴇʀғᴏʀᴍ ᴛʜɪs ᴀᴄᴛɪᴏɴ ..."
+general_6 : "**ʙᴏᴛ ɪs ɴᴏᴛ sᴛʀᴇᴀᴍɪɴɢ \nᴏɴ ᴠᴄ❗...**"
 
 # Classes - Telegram.py
-tg_1 : "**🤖 𝐁𝐨𝐭 𝐢𝐬 𝐎𝐯𝐞𝐫𝐥𝐨𝐚𝐝𝐞𝐝 𝐖𝐢𝐭𝐡 𝐃𝐨𝐰𝐧𝐥𝐨𝐚𝐝𝐬 𝐑𝐢𝐠𝐡𝐭 𝐍𝐨𝐰.\n\n𝐓𝐫𝐲 𝐀𝐟𝐭𝐞𝐫:{0} (__expected time__)**"
-tg_2 : "❌ 𝐅𝐚𝐢𝐥𝐞𝐝 𝐓𝐨 𝐃𝐨𝐞𝐧𝐥𝐨𝐚𝐝 𝐓𝐡𝐞 𝐌𝐞𝐝𝐢𝐚 𝐅𝐫𝐨𝐦 𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦 ✨ ..."
+tg_1 : "**ʙᴏᴛ ɪs ᴏᴠᴇʀʟᴏᴀᴅᴇᴅ ᴡɪᴛʜ ᴅᴏᴡɴʟᴏᴀᴅs ʀɪɢʜᴛ ɴᴏᴡ.\n\nᴛʀʏ ᴀғᴛᴇʀ:{0} (__expected time__)**"
+tg_2 : "ғᴀɪʟᴇᴅ ᴛᴏ ᴅᴏᴡɴʟᴏᴀᴅ ᴛʜᴇ ᴍᴇᴅɪᴀ ғʀᴏᴍ ᴛᴇʟᴇɢʀᴀᴍ..."
 # Core - Call.py
-call_1 : "**🥀 𝐈 𝐍𝐞𝐞𝐝 𝐀𝐝𝐦𝐢𝐧 𝐏𝐞𝐫𝐦𝐢𝐬𝐬𝐢𝐨𝐧 𝐓𝐨 𝐈𝐧𝐯𝐢𝐭𝐞 𝐀𝐬𝐬𝐢𝐬𝐭𝐚𝐧𝐭 𝐢𝐧 𝐘𝐨𝐮𝐫 𝐂𝐡𝐚𝐧𝐧𝐞𝐥 ✨ ...**"
+call_1 : "**ɪ ɴᴇᴇᴅ ᴀᴅᴍɪɴ ᴘᴇʀᴍɪssɪᴏɴ ᴛᴏ ɪɴᴠɪᴛᴇ ᴀssɪsᴛᴀɴᴛ ɪɴ ʏᴏᴜʀ ᴄʜᴀɴɴᴇʟ...**"
 call_2 : "**ᴀssɪsᴛᴀɴᴛ ɪs ʙᴀɴɴᴇᴅ ɪɴ ʏᴏᴜʀ ɢʀᴏᴜᴘ/ᴄʜᴀɴɴᴇʟ..**\n**ᴘʟᴇsᴇ ᴜɴʙᴀɴ ᴛʜᴇ ᴀssɪsᴛᴀɴᴛ**.\n**ID:- [{0}](tg://user?id={1})**"
-call_3 : "ᴇxᴄᴇᴘᴛɪᴏɴ ᴏᴄᴄᴜʀᴇᴅ ᴡʜɪʟᴇ ɪɴᴠɪᴛɪɴɢ ᴀssɪsᴛᴀɴᴛ ᴀᴄᴄᴏᴜɴᴛ ᴛᴏ ʏᴏᴜʀ ᴄʜᴀᴛ ᴍʏ ʟᴏᴠᴇ ​🌹​.\n\n**ʀᴇᴀsᴏɴ**: {0}"
-call_4 : "ʙᴏᴛ ʀᴇǫᴜɪʀᴇs **ɪɴᴠɪᴛᴇ ᴜsᴇʀs ᴠɪᴀ ʟɪɴᴋ** ᴘᴇʀᴍɪssɪᴏɴ ᴛᴏ ɪɴᴠɪᴛᴇ ᴀssɪsᴛᴀɴᴛ ᴀᴄᴄᴏᴜɴᴛ ᴛᴏ ʏᴏᴜʀ ᴄʜᴀᴛ ɢʀᴏᴜᴘ ᴍʏ ʟᴏᴠᴇ ​🌹​."
+call_3 : "ᴇxᴄᴇᴘᴛɪᴏɴ ᴏᴄᴄᴜʀᴇᴅ ᴡʜɪʟᴇ ɪɴᴠɪᴛɪɴɢ ᴀssɪsᴛᴀɴᴛ ᴀᴄᴄᴏᴜɴᴛ ᴛᴏ ʏᴏᴜʀ ᴄʜᴀᴛ ᴍʏ ʟᴏᴠᴇ.\n\n**ʀᴇᴀsᴏɴ**: {0}"
+call_4 : "ʙᴏᴛ ʀᴇǫᴜɪʀᴇs **ɪɴᴠɪᴛᴇ ᴜsᴇʀs ᴠɪᴀ ʟɪɴᴋ** ᴘᴇʀᴍɪssɪᴏɴ ᴛᴏ ɪɴᴠɪᴛᴇ ᴀssɪsᴛᴀɴᴛ ᴀᴄᴄᴏᴜɴᴛ ᴛᴏ ʏᴏᴜʀ ᴄʜᴀᴛ ɢʀᴏᴜᴘ ᴍʏ ʟᴏᴠᴇ."
 call_5 : "ᴀssɪsᴛᴀɴᴛ ᴀᴄᴄᴏᴜɴᴛ ᴡɪʟʟ ʙᴇ ᴊᴏɪɴɪɴɢ ɪɴ 5 sᴇᴄᴏɴᴅs, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ..."
-call_6 : "ᴀssɪsᴛᴀɴᴛ ᴀᴄᴄᴏᴜɴᴛ [{0}] ᴊᴏɪɴᴇᴅ sᴜᴄᴄᴇssꜰᴜʟʟʏ ᴍʏ ʟᴏᴠᴇ ​🌹​.\n\nsᴛᴀʀᴛɪɴɢ ᴍᴜsɪᴄ ɴᴏᴡ"
-call_7 : "**ʜᴀʀᴍꜰᴜʟ ᴀᴅᴍɪɴ ʀɪɢʜᴛ ɢɪᴠᴇɴ **\n\nᴘʟᴇᴀsᴇ ʀᴇᴍᴏᴠᴇ **ʙᴀɴ ᴜsᴇʀs** ʀɪɢʜᴛs ꜰʀᴏᴍ ᴛʜᴇ ʙᴏᴛ ᴍʏ ʟᴏᴠᴇ ​🌹​."
-call_8 : "**ʜᴀʀᴍꜰᴜʟ ᴀᴅᴍɪɴ ʀɪɢʜᴛ ɢɪᴠᴇɴ **\n\nᴘʟᴇᴀsᴇ ʀᴇᴍᴏᴠᴇ **ᴀᴅᴅ ɴᴇᴡ ᴀᴅᴍɪɴs** ʀɪɢʜᴛs ꜰʀᴏᴍ ᴛʜᴇ ʙᴏᴛ ᴍʏ ʟᴏᴠᴇ ​🌹​."
-call_9 : "**🥀 𝐒𝐤𝐢𝐩𝐩𝐢𝐧𝐠 𝐄𝐫𝐫𝐨𝐫, 𝐒𝐨 𝐏𝐥𝐞𝐚𝐬𝐞\n𝐒𝐤𝐢𝐩 𝐀𝐠𝐚𝐢𝐧 ✨ ...**"
-call_10 : "**✅ 𝐃𝐨𝐰𝐧𝐥𝐨𝐚𝐝𝐢𝐧𝐠 𝐍𝐞𝐱𝐭 𝐒𝐨𝐧𝐠\n𝐅𝐫𝐨𝐦 𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 💞 ...**"
-call_11 : "ᴘʟᴇᴀsᴇ ᴀᴅᴅ @{0} ᴛᴏ ʏᴏᴜʀ ᴄʜᴀɴɴᴇʟ​[ ID: {1}].\n\nʙᴏᴛ ɪs ɴᴏᴛ ᴀʙʟᴇ ᴛᴏ ɢᴇᴛ ᴄʜᴀɴɴᴇʟ ᴅᴇᴛᴀɪʟs​."
+call_6 : "ᴀssɪsᴛᴀɴᴛ ᴀᴄᴄᴏᴜɴᴛ [{0}] ᴊᴏɪɴᴇᴅ sᴜᴄᴄᴇssꜰᴜʟʟʏ ᴍʏ ʟᴏᴠᴇ.\n\nsᴛᴀʀᴛɪɴɢ ᴍᴜsɪᴄ ɴᴏᴡ"
+call_7 : "**ʜᴀʀᴍꜰᴜʟ ᴀᴅᴍɪɴ ʀɪɢʜᴛ ɢɪᴠᴇɴ **\n\nᴘʟᴇᴀsᴇ ʀᴇᴍᴏᴠᴇ **ʙᴀɴ ᴜsᴇʀs** ʀɪɢʜᴛs ꜰʀᴏᴍ ᴛʜᴇ ʙᴏᴛ ᴍʏ ʟᴏᴠᴇ."
+call_8 : "**ʜᴀʀᴍꜰᴜʟ ᴀᴅᴍɪɴ ʀɪɢʜᴛ ɢɪᴠᴇɴ **\n\nᴘʟᴇᴀsᴇ ʀᴇᴍᴏᴠᴇ **ᴀᴅᴅ ɴᴇᴡ ᴀᴅᴍɪɴs** ʀɪɢʜᴛs ꜰʀᴏᴍ ᴛʜᴇ ʙᴏᴛ ᴍʏ ʟᴏᴠᴇ."
+call_9 : "**sᴋɪᴘᴘɪɴɢ ᴇʀʀᴏʀ, sᴏ ᴘʟᴇᴀsᴇ\nsᴋɪᴘ ᴀɢᴀɪɴ...**"
+call_10 : "**ᴅᴏᴡɴʟᴏᴀᴅɪɴɢ ɴᴇxᴛ sᴏɴɢ\nғʀᴏᴍ ᴘʟᴀʏʟɪsᴛ...**"
+call_11 : "ᴘʟᴇᴀsᴇ ᴀᴅᴅ @{0} ᴛᴏ ʏᴏᴜʀ ᴄʜᴀɴɴᴇʟ [ ID: {1}].\n\nʙᴏᴛ ɪs ɴᴏᴛ ᴀʙʟᴇ ᴛᴏ ɢᴇᴛ ᴄʜᴀɴɴᴇʟ ᴅᴇᴛᴀɪʟs."
 
 # PLUGINS - Auth.py
-auth_1 : "**🥀 𝐘𝐨𝐮 𝐂𝐚𝐧 𝐎𝐧𝐥𝐲 𝐇𝐚𝐯𝐞 𝟐𝟎 𝐔𝐬𝐞𝐫𝐬\n𝐢𝐧 𝐘𝐨𝐮𝐫 𝐆𝐫𝐨𝐮𝐩 𝐀𝐮𝐭𝐡𝐨𝐫𝐢𝐬𝐞𝐝 𝐔𝐬𝐞𝐫𝐬\n𝐋𝐢𝐬𝐭 (𝐀𝐔𝐋) ✨ ...**"
-auth_2 : "**✅ 𝐀𝐝𝐝𝐞𝐝 𝐓𝐨 𝐀𝐮𝐭𝐡𝐨𝐫𝐢𝐬𝐞𝐝 𝐔𝐬𝐞𝐫𝐬\n𝐋𝐢𝐬𝐭 𝐎𝐟 𝐘𝐨𝐮𝐫 𝐆𝐫𝐨𝐮𝐩 ✨ ...**"
-auth_3 : "**✅ 𝐀𝐥𝐫𝐞𝐚𝐝𝐲 𝐢𝐧 𝐓𝐡𝐞 𝐀𝐮𝐭𝐡𝐨𝐫𝐢𝐬𝐞𝐝\n𝐔𝐬𝐞𝐫𝐬 𝐋𝐢𝐬𝐭 💞 ...**"
-auth_4 : "**✅ 𝐑𝐞𝐦𝐨𝐯𝐞𝐝 𝐅𝐫𝐨𝐦 𝐀𝐮𝐭𝐡𝐨𝐫𝐢𝐬𝐞𝐝\n𝐔𝐬𝐞𝐫𝐬 𝐋𝐢𝐬𝐭 𝐎𝐟 𝐘𝐨𝐮𝐫 𝐆𝐫𝐨𝐮𝐩 ✨ ...**"
-auth_5 : "**❌ 𝐓𝐚𝐫𝐠𝐞𝐭𝐞𝐝 𝐔𝐬𝐞𝐫 𝐢𝐬 𝐍𝐨𝐭 𝐀𝐧 \n𝐀𝐮𝐭𝐡𝐨𝐫𝐢𝐬𝐞𝐝 𝐔𝐬𝐞𝐫❗...**"
+auth_1 : "**ʏᴏᴜ ᴄᴀɴ ᴏɴʟʏ ʜᴀᴠᴇ 20 ᴜsᴇʀs\nɪɴ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴀᴜᴛʜᴏʀɪsᴇᴅ ᴜsᴇʀs\nʟɪsᴛ (ᴀᴜʟ)...**"
+auth_2 : "**ᴀᴅᴅᴇᴅ ᴛᴏ ᴀᴜᴛʜᴏʀɪsᴇᴅ ᴜsᴇʀs\nʟɪsᴛ ᴏғ ʏᴏᴜʀ ɢʀᴏᴜᴘ...**"
+auth_3 : "**ᴀʟʀᴇᴀᴅʏ ɪɴ ᴛʜᴇ ᴀᴜᴛʜᴏʀɪsᴇᴅ \nᴜsᴇʀ ʟɪsᴛ...**"
+auth_4 : "**ʀᴇᴍᴏᴠᴇᴅ ɪɴ ᴛʜᴇ ᴀᴜᴛʜᴏʀɪsᴇᴅ \nᴜsᴇʀs ʟɪsᴛ ɪɴ ʏᴏᴜʀ ɢʀᴏᴜᴘ...**"
+auth_5 : "**ᴛᴀʀɢᴇᴛᴇᴅ ᴜsᴇʀ ɪs ɴᴏᴛ ᴀɴ \nᴀᴜᴛʜᴏʀɪsᴇᴅ ᴜsᴇʀ❗...**"
 auth_6 : "**🔃 𝐏𝐥𝐞𝐚𝐬𝐞 𝐖𝐚𝐢𝐭, 𝐅𝐞𝐭𝐜𝐡𝐢𝐧𝐠 𝐀𝐥𝐥\n𝐀𝐮𝐭𝐡𝐨𝐫𝐢𝐬𝐞𝐝 𝐔𝐬𝐞𝐫𝐬 ✨ ...**"
 auth_7 : "**🤖 𝐀𝐮𝐭𝐡𝐨𝐫𝐢𝐬𝐞𝐝 𝐔𝐬𝐞𝐫𝐬 𝐋𝐢𝐬𝐭 [𝐀𝐔𝐋]:**\n\n"
 auth_8 : "**┗ 𝐀𝐝𝐝𝐞𝐝 𝐁𝐲:-**"
