--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -53,8 +53,8 @@ admin_15 : "**ɴᴏᴛ ᴇɴᴏᴜɢʜ ᴛʀᴀᴄᴋs ɪɴ ǫᴜᴇᴜᴇ ғᴏ
 admin_16 : "**ғᴀɪʟᴇᴅ ᴛᴏ sᴋɪᴘ ᴛᴏ sᴘᴇᴄɪғɪᴄ sᴏɴɢ ✨ ...\n\nᴄʜᴇᴄᴋ ʟᴇғᴛ ǫᴜᴇᴜᴇ ʙʏ »** /queue"
 admin_17 : "{0}.. ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ"
 admin_18 : "ᴀᴅᴍɪɴ ʟɪsᴛ ɴᴏᴛ ғᴏᴜɴᴅ\n\nᴘʟᴇᴀsᴇ ʀᴇʟᴏᴀᴅ ᴀᴅᴍɪɴʟɪsᴛ ᴠɪᴀ /admincache ᴏʀ /reload"
-admin_19 : "🤖 𝐒𝐨𝐫𝐫𝐲 𝐘𝐨𝐮 𝐃𝐨𝐧'𝐭 𝐇𝐚𝐯𝐞 𝐌𝐚𝐧𝐚𝐠𝐞 𝐕𝐂 𝐏𝐞𝐫𝐦𝐢𝐬𝐬𝐢𝐨𝐧 ✨ ..."
-admin_20 : "𝐀𝐝𝐦𝐢𝐧 𝐂𝐚𝐜𝐡𝐞 𝐑𝐞𝐥𝐨𝐚𝐝𝐞𝐝 𝐒𝐮𝐜𝐜𝐞𝐬𝐬𝐟𝐮𝐥𝐥𝐲."
+admin_19 : "sᴏʀʀʏ ʏᴏᴜ ᴅᴏɴ''ᴛ ʜᴀᴠᴇ ᴠᴄ ʀɪɢʜᴛs..."
+admin_20 : "ᴀᴅᴍɪɴ ᴄᴀᴄʜᴇ ʀᴇʟᴏᴀᴅᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ."
 admin_21 : "**❌ 𝐍𝐨𝐭𝐡𝐢𝐧𝐠 𝐢𝐧𝐬𝐢𝐝𝐞 𝐐𝐮𝐞𝐮𝐞 𝐓𝐨 𝐒𝐡𝐮𝐟𝐟𝐥𝐞❗...**"
 admin_22 : "**❌ 𝐅𝐚𝐢𝐥𝐞𝐝 𝐓𝐨 𝐒𝐡𝐮𝐟𝐟𝐥𝐞.\n\n𝐂𝐡𝐞𝐜𝐤 𝐐𝐮𝐞𝐮𝐞 :** /queue"
 admin_23 : "**✅ 𝐐𝐮𝐞𝐮𝐞 𝐒𝐡𝐮𝐟𝐟𝐥𝐞𝐝 𝐁𝐲 {0}**\n\n**𝐂𝐡𝐞𝐜𝐤 𝐒𝐡𝐮𝐟𝐟𝐥𝐞𝐝 𝐐𝐮𝐞𝐮𝐞 :** /queue"
