--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -27,7 +27,7 @@ call_11 : "ᴘʟᴇᴀsᴇ ᴀᴅᴅ @{0} ᴛᴏ ʏᴏᴜʀ ᴄʜᴀɴɴᴇʟ​
 # PLUGINS - Auth.py
 auth_1 : "**💥 Bsᴅᴋ 20 ᴛᴏʜ ᴅᴀᴀʟ ᴅɪʏᴇ ᴀʙʜ ᴋʏ ɢᴀɴᴅ ᴍᴇ ᴅᴀʟᴇɢᴀ ʟᴠᴅᴇ ✨ ...**"
 auth_2 : "**✅  Cʜᴀʟ ᴛᴜ ʙʜɪ ᴀᴀ ɢʏᴀ ɪᴅʜʀ ᴊᴀ ᴋʜᴜsʜ ʀʜ ᴀʙʜ ✨ ...**"
-auth_3 : "**✅  Aʙʜ ᴊʜᴀᴀᴛᴜ ʏᴇʜ ᴘʜʟᴇ sᴇ ʜᴀɪ ɪsᴍᴇ ᴛᴇʀɪ ᴅᴜsʀɪ ʙɪᴡɪ ɴʜɪ ʜᴀɪ ʟᴠᴅᴇ ᴊᴏ 2 ʙᴀᴀʀ ᴅᴀʟᴇɢᴀ\💞 ...**"
+auth_3 : "**✅  Aʙʜ ᴊʜᴀᴀᴛᴜ ʏᴇʜ ᴘʜʟᴇ sᴇ ʜᴀɪ ɪsᴍᴇ ᴛᴇʀɪ ᴅᴜsʀɪ ʙɪᴡɪ ɴʜɪ ʜᴀɪ ʟᴠᴅᴇ ᴊᴏ 2 ʙᴀᴀʀ ᴅᴀʟᴇɢᴀ\n𝐔𝐬𝐞𝐫𝐬 𝐋𝐢𝐬𝐭 💞 ...**"
 auth_4 : "**✅  Cʜᴀʟ ɴɪᴋʟ ʟᴠᴅᴇ ᴛᴇʀɪ ᴊᴀʀᴜʀᴀᴛ ɴʜɪ ᴀʙʜ ɪsᴋᴏ ʙʜɢ ɪᴅʜʀ sᴇ ✨ ...**"
 auth_5 : "**❌  Aʙᴇ ᴄʜᴜᴛɪʏᴇ ʏᴇʜ ᴡᴏʜ ɴʜɪ ᴊᴏ ᴛᴜ sᴍᴊʜ ʀᴀʜᴀ ᴊᴀᴋʀ ᴄʜᴀsᴍᴀ ʟᴇᴋʀ ᴀᴀ ғɪʀ ᴅᴇᴋʜ ❗...**"
 auth_6 : "**🔃 Rᴜᴋ ᴊᴀ ʟᴠᴅᴇ ᴅᴇ ʀʜᴀ ʜᴜ ʟɪsᴛ ᴍᴜᴜ ᴍᴇ ᴅᴀᴀʟ ʟᴇɴᴀ ᴏᴋ ✨ ...**"
